--- a/mcp_config.json
+++ b/mcp_config.json
@@ -3,7 +3,7 @@
         "stitch": {
             "serverUrl": "https://stitch.googleapis.com/mcp",
             "headers": {
-                "X-Goog-Api-Key": "AQ.Ab8RN6JergppSmjMSk5UbpdIEuhvWM0xcbTYmD3fTGMWpfAxhg"
+                "X-Goog-Api-Key": "YOUR_API_KEY_HERE"
             }
         }
     }
